syntax = "proto3";
package loginrpc;
option go_package = "vgproj/proto/loginrpc";

// message ReqLogin {
//     int64 account_id = 1;
//     string token = 2;
//     int32 server_id = 3;
// }

// message RspLogin {
//     int32 code = 1;
//     uint64 rnd = 2;
// }

message NotifyLogout {
    int64 account_id = 1;
    int32 server_id = 2;
    int64 player_id = 3;
    string name = 4;
    int64 combat = 5;
}
